--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
   <H1>
    Jremiah Callahan
    <H1>
+    <p> I played soccer for TOwers Highschool, I also spent my summer at GSU with Upward bound I did an hour worth of community service.<p>
  </html>
