--- a/html/newpage.html
+++ b/html/newpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US"
- <H1> THis is my new page</H1>
-  <p>Here are some pointless words<p>
+      <H1 style="color:#FFD700;">THis is my new page</H1>
+  <p style="color:#FFD700;">Here are some pointless words<p>
 <html>      
