--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
   
   <p> I made this page at <a href="https://www.towershs.dekalb.k12.ga.us/">[Towers High School!]</a> 
-   <a href="https://www.towershs.dekalb.k12.ga.us/sysimages/logo.png">[An image of the Towers High and Dekalb County logos]</a>  This is for my **Introduction to Software Technologies** class.
+   <a href="https://www.towershs.dekalb.k12.ga.us/sysimages/logo.png">[An image of the Towers High and Dekalb County logos]</a>  This is for my **Introduction to Software Technologies** class.<p\>
    
        
     What I learned   
