--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     in law, so when I get i9nto collge so my goal is to major in pyschology. THe type of attorney I want to be is a criminal defence or a Personal Injury attorney</p>
     
   
-  <p> I made this page at <a href="https://www.towershs.dekalb.k12.ga.us/">[Towers High School!]</a> 
-   <a href="https://www.towershs.dekalb.k12.ga.us/sysimages/logo.png">[An image of the Towers High and Dekalb County logos]</a>  This is for my **Introduction to Software Technologies** class.<p\>
+  <p> I made this page at <a href="https://www.towershs.dekalb.k12.ga.us/">[Towers High School!]</a> This is for my **Introduction to Software Technologies** class.<p\>
    
        
     What I learned   
