--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   
   <p> I made this page at <a href="https://www.towershs.dekalb.k12.ga.us/">[Towers High School!]</a> This is for my **Introduction to Software Technologies** class.<p\>
    
+   <h2>[An image of the Towers High and Dekalb County logos]</h2>
+<img src="https://www.towershs.dekalb.k12.ga.us/sysimages/logo.png" width="200" height="200">
        
     What I learned   
   
