--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
  <html lang="en-US">
+     
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="css/style.css">
+ </head>
+ <body>
+ <div class="navbar">
+   <li><a href="./">About</a></li>
+   <li><a href="html/Sports">Sports</a></li>
+   <li><a href="html/dreams">dreams</a></li>
+ </div>
+ <div class="main">
+   <div class="clearfix" width=80%>
+
+
   <H1>
    Jremiah Callahan
    </h1>
