--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
  <body>
  <div class="navbar">
    <li><a href="./">About</a></li>
-   <li><a href="html/Sports">Sports</a></li>
-   <li><a href="html/dreams">dreams</a></li>
+   <li><a href="html/Types of Attorney">Sports</a></li>
+   <li><a href="html/Soccer">dreams</a></li>
  </div>
  <div class="main">
    <div class="clearfix" width=80%>
@@ -18,7 +18,7 @@
    Jremiah Callahan
    </h1>
     <p> I attend Towers Highschool, Im a sophmore I also spent my summer at GSU with Upward bound I did an hour worth of community service. I have an interest
-    in law, so when I get i9nto collge so my goal is to major in pyschology. THe type of attorney I want to be is a criminal defence or a Personal Injury attorney</p>
+    in law, so when I get into collge so my goal is to major in pyschology. THe type of attorney I want to be is a criminal defence or a Personal Injury attorney</p>
     
   
   <p> I made this page at <a href="https://www.towershs.dekalb.k12.ga.us/">[Towers High School!]</a> This is for my **Introduction to Software Technologies** class.<p\>
