--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
  <html lang="en-US">
-   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="css/style.css">
-  </head>
- <body>
- <div class="navbar">
-   <li><a href="./">About</a></li>
-   <li><a href="html/Types of Attorney">Sports</a></li>
-   <li><a href="html/Soccer">dreams</a></li>
- </div>
- <div class="main">
-   <div class="clearfix" width=80%>
+   <body>
+    
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#contact">Sports</a></li>
+  <li><a href="#about"Becomming an Attorney</a></li>
+</ul>
 
+</body
 
   <H1>
    Jremiah Callahan
