--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#contact">Sports</a></li>
-  <li><a href="#about"Becomming an Attorney</a></li>
+  <li><a href="#about">Goals</a>
 </ul>
 
 </body
