--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ li a {
 <body>
 
 <ul>
+ <div class="navbar">
   <li><a href="#home">Home</a></li>
   <li><a href="#contact">Sports</a></li>
   <li><a href="#about">Goals</a></li>
