--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ li a {
 
 <ul>
  <div class="navbar">
-  <li><a href="#home">Home</a></li>
-  <li><a href="#contact">Sports</a></li>
+  <li><a href="./">Home"<</a></li>
+  <li><a href="html/contact">Sports</a></li>
   <li><a href="#about">Goals</a></li>
 </ul>
 
