--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ li a {
 <ul>
  <div class="navbar">
   <li><a href="./">Home"<</a></li>
-  <li><a href="html/contact">Sports</a></li>
-  <li><a href="#about">Goals</a></li>
+  <li><a href="Sports">Sports</a></li>
+  <li><a href="Goals">Goals</a></li>
 </ul>
 
 </body
