--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ li a {
 
 <ul>
  <div class="navbar">
-  <li><a href="./">Home"<</a></li>
+  <li><a href="./">Home</a></li>
   <li><a href="Sports">Sports</a></li>
   <li><a href="Goals">Goals</a></li>
 </ul>
