Update and rename publications.html to Goals.html

--- a/Goals.html
+++ b/Goals.html
@@ -5,9 +5,9 @@
   </head>
   <body>
   <div class="navbar">
-    <li><a href="../">About</a></li>
-    <li><a href="./publications">Publications</a></li>
-    <li><a href="./research">Research</a></li>
+    <li><a href="../">Home</a></li>
+    <li><a href="./Goals">Goals</a></li>
+    <li><a href="./Sports">Sports</a></li>
   </div>
   <hr width=80%>
   <div class="main">
