--- a/research.html
+++ b/research.html
@@ -4,13 +4,14 @@
   </head>
   <body>
   <div class="navbar">
-    <li><a href="../">About</a></li>
-    <li><a href="./publications">Publications</a></li>
-    <li><a href="./research">Research</a></li>
+    <li><a href="../">Home</a></li>
+    <li><a href="./Goals">Goals</a></li>
+    <li><a href="./Sports">Sports</a></li>
   </div>
   <hr width=80%>
   <div class="main">
-    <h1>Research</h1>
-    <p>Here are some things I study.</p>
+    <h1>Publications</h1>
+    <p>Pub list</p>
       
 </html>
+
